<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PopHoodActivity">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/hoodlib_ic_cached_white_24dp"
        android:title="@string/hood_action_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_app_info"
        android:icon="@drawable/hoodlib_ic_info_outline_white_24dp"
        android:title="@string/hood_action_app_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_kill_process"
        android:title="@string/hood_action_kill_process"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_log"
        android:title="@string/hood_action_log"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_date"
        android:title="@string/hood_action_clear_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_uninstall"
        android:title="@string/hood_action_uninstall"
        app:showAsAction="never" />
</menu>
