<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PopHoodActivityy">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_cached_white_24dp"
        android:title="@string/hood_action_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_app_info"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/hood_action_app_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_uninstall"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/hood_action_uninstall"
        app:showAsAction="never" />
</menu>
